--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.bg-cover-gradient {
+  height: 85vh;
+  background-image: linear-gradient(
+    to right,
+    rgb(0 0 0 / 0.5),
+    rgb(0 0 0 / 0.6)
+  );
+}
