--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,3 +36,24 @@ p {
 .myclamp {
   font-size: clamp(0.5 rem, 1.5vw + 0.5rem, 1.8rem);
 }
+
+.mydiv {
+  background-color: white;
+  height: 2px;
+  width: 100%;
+  border-radius: 5px;
+  transition: all 0.5s;
+  transform-origin: left;
+}
+
+.mydiv.first-open {
+  transform: rotate(45deg);
+}
+
+.mydiv.second-open {
+  opacity: 0;
+}
+
+.mydiv.third-open {
+  transform: rotate(-45deg);
+}
